--- a/WindowsFormsApplication1/WindowsFormsApplication1/Home.resx
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/Home.resx
@@ -774,4 +774,7 @@
         8L/F/ybWyACAUrjlf/3/zF0h4EUSJfoAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
